--- a/syllabi/MSDS-692-syllabus-2023.tex
+++ b/syllabi/MSDS-692-syllabus-2023.tex
@@ -20,10 +20,10 @@
 \pagestyle{empty}
 
 \noindent \begin{center}
-\begin{Large}\textbf{MSAN 630 -- Advanced Machine Learning}\\
+\begin{Large}\textbf{MSAN 692 -- Data Acquisition}\\
 \textbf{Instructor: Yannet Interian}\\
 \textbf{Course Syllabus}\\
-\textbf{Spring 2021}\\\end{Large}
+\textbf{Spring 2023}\\\end{Large}
 \end{center}
 
 \vspace{0.15in}
@@ -34,8 +34,8 @@
 \noindent \textbf{SUMMARY INFORMATION}\\
 \noindent \textbf{Office:} 101 Howard, \# 605 \\
 \noindent \textbf{Email Address:} \url{yinterian@usfca.edu}\\\vspace{0.10in}
-\noindent \textbf{Class Time:}  Tuesdays and Thursdays 10am - 11:50pm and 1pm - 2:50pm \\
-\noindent \textbf{Office Hours:} 3pm-4pm Tuesdays and Thursdays in my office.
+\noindent \textbf{Class Time:}  TBA  \\
+\noindent \textbf{Office Hours:} TBA
 \end{center}
 }
 }
@@ -43,25 +43,25 @@
 \vspace{0.25in}
 
 \noindent \textbf{COURSE GOALS}\\
-On completion of this course the student should be able to:
-\vspace{-0.05in}
 
+The goals of a Data Acquisition course with the given syllabus could include:
 \begin{itemize*}
-\item	Describe and apply several learning algorithms/ models and their variants, including: Boosting, Collaborative Filtering, Neural Networks, Word Embeddings.
-\item	Select the appropriate learning algorithm or approach for a given situation or dataset.
-%\item	Apply the principles of feature selection, feature engineering and hyper-parameter tuning.
-\item Implement from scratch various machine learning algorithms in Python: Gradient Boosting, Matrix Factorization.
-\item Implement basic Neural Networks in PyTorch (for example Continuous Bag of Words for Text Classification).
-\item Implement advanced feature engineering techniques.
-\item	As part of a team, carry out a machine learning project from start to end, including:
-\begin{itemize*}
-\item Research literature related to the problem.
-\item Prepare the data for application of algorithms, including feature engineering.
-\item	Choose and apply the appropriate ML algorithms (as well as hyper-parameter tuning).
-\item Evaluate the results.
-\item Communicate the results both orally and in writing.
+\item Understanding data acquisition tools and techniques: The course aims to familiarize students with essential tools like the command-line, git, and Python environments. Students will learn how to organize data in memory and use hashtable implementations of sets and dictionaries.
+
+\item Data formats: The course aims to teach students about different data formats, including human-readable text (e.g., CSV files), XML, and JSON. Students will also learn about binary formats, such as those used in audio and image processing.
+
+\item Text feature extraction: The course aims to introduce students to techniques for extracting features from text, such as computing TF-IDF and performing information extraction using libraries like Spacy. Students will also learn how to manipulate text from the command line and create word clouds.
+
+\item Web infrastructure: The course aims to teach students about network sockets, DNS, email, HTTP, and web servers. Students will learn how to launch AWS boxes and use Flask to build web applications.
+
+\item Data sources: The course aims to introduce students to different sources of data, including REST APIs and websites that require API keys. Students will also learn how to extract data from web pages using techniques like crawling, scraping data from tables, and using libraries like Selenium.
+
+\item Miscellaneous: The course includes some miscellaneous topics like debugging with PyCharm and creating heat maps using tools like Folium and the Google Maps API.
 \end{itemize*}
-\end{itemize*}
+
+Overall, the goal of the course is to be to equip students with the necessary tools and techniques to acquire and process data from various sources. By the end of the course, students should be able to extract data from a wide range of sources, manipulate it appropriately, and perform feature extraction to generate useful insights.
+
+\vspace{0.5in}
 
 \noindent \textbf{COURSE CONTENT} (subject to change)
 
@@ -78,19 +78,12 @@ On completion of this course the student should be able to:
 \vspace{0.1in}
 
 \noindent \noindent \textbf{TEXTBOOKS} \\
-\vspace{-0.05in}
-\begin{enumerate}
-\item Pattern Recognition and Machine Learning. Bishop. 
-\item The Elements of Statistical Learning: Data Mining, Inference, and Prediction. Trevor Hastie, Robert Tibshirani, Jerome Friedman. \url{https://statweb.stanford.edu/~tibs/ElemStatLearn/} 
-\item Deep Learning. Ian Goodfellow and Yoshua Bengio and Aaron Courville.  \url{http://www.deeplearningbook.org/}
-\item Mining of Massive Datasets. Jure Leskovec, Anand Rajaraman and Jeffrey D. Ullman (Chapters 8, 9). \url{www.mmds.org}
-\item Deep Learning. Ian Goodfellow and Yoshua Bengio and Aaron Courville \url{http://www.deeplearningbook.org}
-\item Machine Learning: A Probabilistic Perspective. Kevin Murphy. 
-\end{enumerate}
 
-\noindent \textbf{Homework.} You will be required to complete 5 homework assignments. You must work on homework \textbf{individually} and \textbf{turn in your own individualized write-up and code}. All homework assignments are to be completed and submitted individually. You may consult with other students in the class regarding homework, but each student should complete all parts of the assignment successfully without assistance.\\
 
-\noindent \textbf{Exams.} You will be required to complete 2 quizzes and a final exam.  All quizzes and exams are going to be closed books and notes.\\
+
+\noindent \textbf{Labs and projects} You will be required to complete 5  labs  and 5 projects. You must work on homework \textbf{individually} and \textbf{turn in your own individualized write-up and code}. All homework assignments are to be completed and submitted individually. You may consult with other students in the class regarding homework, but each student should complete all parts of the assignment successfully without assistance.\\
+
+\noindent \textbf{Exams.} You will be required to complete 2 exams.  \\
 
 \noindent \textbf{Grading.} Part of my job as an instructor is to assign grades fairly and in a manner that reflects the high academic standards at the University of San Francisco and in the MSAN program. Your grade in this course will be computed according to the following weights:\\
 
@@ -101,9 +94,9 @@ On completion of this course the student should be able to:
   \hline
   \textbf{Component} & \textbf{Weight} \\
   \hline
-  Homework & 15\%  \\
-  Exams & 70\%  \\
-  Final Project & 15\% \\
+  Labs & 10\% \\
+  Projects & 40\% \\
+  Exams & 50\%  \\
   \hline
 \end{tabular}
 \end{center}
