--- a/syllabi/MSDS-692-syllabus-2023.tex
+++ b/syllabi/MSDS-692-syllabus-2023.tex
@@ -40,6 +40,10 @@
 }
 }
 
+The field of data science offers an abundance of intriguing and captivating challenges, ranging from identifying relevant research questions to selecting suitable features, training models, and interpreting results. However, all of these endeavors rely on a well-organized and structured dataset that can be analyzed and modeled. According to industry experts, collecting and preparing data typically constitutes around 75\% of any analytical project.
+
+Although this course is called "Data Acquisition," it is important to recognize that obtaining data is merely the first step. After acquiring the data, we must organize it into structured formats and often extract meaningful insights from raw data. For example, we may need to distill a Twitter feed into a single positive or negative sentiment score for a specific user. This course will provide you with the essential skills to collect, structure, consolidate, and extract insights from diverse data sources, preparing you for effective analytical work. Along the way, you will develop expertise in various tools and technologies, including the command line, git, and APIs.
+
 \vspace{0.25in}
 
 \noindent \textbf{COURSE GOALS}\\
@@ -68,12 +72,7 @@ Overall, the goal of the course is to be to equip students with the necessary to
 \vspace{-0.05in}
 
 \begin{itemize*}
-\item	Recommendation Algorithms: Collaborative Filtering, Matrix Factorization.
-\item Boosting: Adaboost, Gradient Boosting.
-\item Neural Networks, Pytorch.
-\item Applications of Neural Networks: text classification, recommendation systems.
-\item Word Embeddings.
-\item Autoencoders
+\item	 TODO
 \end{itemize*}
 \vspace{0.1in}
 
