--- a/notebooks/lecture_1_beautifulsoup.ipynb
+++ b/notebooks/lecture_1_beautifulsoup.ipynb
@@ -4,7 +4,147 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Getting Covid data with BeautifulSoup\n",
+    "## BeautifulSoup Basic examples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: bs4 in /Users/yannetinterian/anaconda3/lib/python3.10/site-packages (0.0.1)\n",
+      "Requirement already satisfied: beautifulsoup4 in /Users/yannetinterian/anaconda3/lib/python3.10/site-packages (from bs4) (4.12.2)\n",
+      "Requirement already satisfied: soupsieve>1.2 in /Users/yannetinterian/anaconda3/lib/python3.10/site-packages (from beautifulsoup4->bs4) (2.4)\n",
+      "Requirement already satisfied: requests in /Users/yannetinterian/anaconda3/lib/python3.10/site-packages (2.30.0)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in /Users/yannetinterian/anaconda3/lib/python3.10/site-packages (from requests) (2.10)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /Users/yannetinterian/anaconda3/lib/python3.10/site-packages (from requests) (2022.12.7)\n",
+      "Requirement already satisfied: urllib3<3,>=1.21.1 in /Users/yannetinterian/anaconda3/lib/python3.10/site-packages (from requests) (1.26.15)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in /Users/yannetinterian/anaconda3/lib/python3.10/site-packages (from requests) (2.0.4)\n",
+      "Requirement already satisfied: lxml in /Users/yannetinterian/anaconda3/lib/python3.10/site-packages (4.9.2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "! pip install bs4\n",
+    "! pip install requests\n",
+    "! pip install lxml"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from bs4 import BeautifulSoup\n",
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"\"\"\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "  <title>My First HTML Page</title>\n",
+    "</head>\n",
+    "<body>\n",
+    "  <h1 class=\"title\">Welcome to My Website!</h1>\n",
+    "</body>\n",
+    "</html>\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<h1 class=\"title\">Welcome to My Website!</h1>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup = BeautifulSoup(text, \"lxml\")\n",
+    "soup.find('h1', class_=\"title\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = \"\"\"\n",
+    "<!DOCTYPE html>\n",
+    "<html>\n",
+    "<head>\n",
+    "  <title>My Repeated Tags Example</title>\n",
+    "</head>\n",
+    "<body>\n",
+    "  <h2>Repeating Tags Example</h2>\n",
+    "  <p>This is a paragraph.</p>\n",
+    "  <p>This is another paragraph.</p>\n",
+    "  <ul>\n",
+    "    <li>List item 1</li>\n",
+    "    <li>List item 2</li>\n",
+    "    <li>List item 3</li>\n",
+    "  </ul>\n",
+    "</body>\n",
+    "</html>\n",
+    "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<p>This is a paragraph.</p>, <p>This is another paragraph.</p>]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "soup = BeautifulSoup(text, \"lxml\")\n",
+    "soup.find_all('p')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup.find_all('p')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Getting Covid data with BeautifulSoup\n",
     "\n",
     "Let's figure out how to scrape some [data on the coronavirus from Wikipedia](https://en.wikipedia.org/wiki/COVID-19_pandemic_by_country_and_territory)."
    ]
@@ -77,9 +217,6 @@
     }
    ],
    "source": [
-    "from bs4 import BeautifulSoup\n",
-    "import requests\n",
-    "\n",
     "CovidURL = \"https://en.wikipedia.org/wiki/COVID-19_pandemic_by_country_and_territory\"\n",
     "response = requests.get(CovidURL)\n",
     "print(response.text[0:1000])"
