--- a/notebooks/lecture_5_excel.ipynb
+++ b/notebooks/lecture_5_excel.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -227,23 +227,23 @@
        "</div>"
       ],
       "text/plain": [
-       "   Row ID        Order ID Order Date  Ship Date     Ship Mode Customer ID  \\\n",
-       "0       1  CA-2016-152156 2016-11-08 2016-11-11  Second Class    CG-12520   \n",
+       "   Row ID        Order ID Order Date  Ship Date     Ship Mode Customer ID   \n",
+       "0       1  CA-2016-152156 2016-11-08 2016-11-11  Second Class    CG-12520  \\\n",
        "1       2  CA-2016-152156 2016-11-08 2016-11-11  Second Class    CG-12520   \n",
        "2       3  CA-2016-138688 2016-06-12 2016-06-16  Second Class    DV-13045   \n",
        "\n",
-       "     Customer Name    Segment        Country         City  ... Postal Code  \\\n",
-       "0      Claire Gute   Consumer  United States    Henderson  ...       42420   \n",
+       "     Customer Name    Segment        Country         City  ... Postal Code   \n",
+       "0      Claire Gute   Consumer  United States    Henderson  ...       42420  \\\n",
        "1      Claire Gute   Consumer  United States    Henderson  ...       42420   \n",
        "2  Darrin Van Huff  Corporate  United States  Los Angeles  ...       90036   \n",
        "\n",
-       "   Region       Product ID         Category Sub-Category  \\\n",
-       "0   South  FUR-BO-10001798        Furniture    Bookcases   \n",
+       "   Region       Product ID         Category Sub-Category   \n",
+       "0   South  FUR-BO-10001798        Furniture    Bookcases  \\\n",
        "1   South  FUR-CH-10000454        Furniture       Chairs   \n",
        "2    West  OFF-LA-10000240  Office Supplies       Labels   \n",
        "\n",
-       "                                        Product Name   Sales  Quantity  \\\n",
-       "0                  Bush Somerset Collection Bookcase  261.96         2   \n",
+       "                                        Product Name   Sales  Quantity   \n",
+       "0                  Bush Somerset Collection Bookcase  261.96         2  \\\n",
        "1  Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.94         3   \n",
        "2  Self-Adhesive Address Labels for Typewriters b...   14.62         2   \n",
        "\n",
@@ -255,7 +255,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +346,7 @@
        "        '72.94799999999998']], dtype='<U127')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -495,23 +495,23 @@
        "</div>"
       ],
       "text/plain": [
-       "   Row ID        Order ID  Order Date   Ship Date     Ship Mode Customer ID  \\\n",
-       "0     1.0  CA-2016-152156  2016-11-08  2016-11-11  Second Class    CG-12520   \n",
+       "   Row ID        Order ID  Order Date   Ship Date     Ship Mode Customer ID   \n",
+       "0     1.0  CA-2016-152156  2016-11-08  2016-11-11  Second Class    CG-12520  \\\n",
        "1     2.0  CA-2016-152156  2016-11-08  2016-11-11  Second Class    CG-12520   \n",
        "2     3.0  CA-2016-138688  2016-06-12  2016-06-16  Second Class    DV-13045   \n",
        "\n",
-       "     Customer Name    Segment        Country         City  ... Postal Code  \\\n",
-       "0      Claire Gute   Consumer  United States    Henderson  ...     42420.0   \n",
+       "     Customer Name    Segment        Country         City  ... Postal Code   \n",
+       "0      Claire Gute   Consumer  United States    Henderson  ...     42420.0  \\\n",
        "1      Claire Gute   Consumer  United States    Henderson  ...     42420.0   \n",
        "2  Darrin Van Huff  Corporate  United States  Los Angeles  ...     90036.0   \n",
        "\n",
-       "   Region       Product ID         Category Sub-Category  \\\n",
-       "0   South  FUR-BO-10001798        Furniture    Bookcases   \n",
+       "   Region       Product ID         Category Sub-Category   \n",
+       "0   South  FUR-BO-10001798        Furniture    Bookcases  \\\n",
        "1   South  FUR-CH-10000454        Furniture       Chairs   \n",
        "2    West  OFF-LA-10000240  Office Supplies       Labels   \n",
        "\n",
-       "                                        Product Name   Sales  Quantity  \\\n",
-       "0                  Bush Somerset Collection Bookcase  261.96       2.0   \n",
+       "                                        Product Name   Sales  Quantity   \n",
+       "0                  Bush Somerset Collection Bookcase  261.96       2.0  \\\n",
        "1  Hon Deluxe Fabric Upholstered Stacking Chairs,...  731.94       3.0   \n",
        "2  Self-Adhesive Address Labels for Typewriters b...   14.62       2.0   \n",
        "\n",
@@ -523,7 +523,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {
     "scrolled": true
    },
@@ -559,7 +559,7 @@
        "Name: Customer Name, dtype: object"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -584,7 +584,7 @@
        "Name: Profit, dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -618,7 +618,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.10.11"
   },
   "toc": {
    "colors": {
