--- a/README.org
+++ b/README.org
@@ -31,6 +31,6 @@ Here is a tentative schedule for the course:
 | Sep 25 | Selenium Part 2 | | |
 | Sep 29 | Flask| | HW5: Recommending server (due Oct 6)|
 | Oct 2 | REST API| | |
-| Oct 6 | | | |
+| Oct 6 | End to end Data Science Project| | |
 | Oct 9 | GPT for creating labels| | |
 | Oct 13 | Exam| | |
