--- a/README.org
+++ b/README.org
@@ -25,7 +25,7 @@ Here is a tentative schedule for the course:
 | Sep 8 | Data Formats, XML, XPath | | HW2: Data pipeline (due Sep 14)|
 | Sep 11 | Text feature extraction| | HW3: TFIDF (due Sep 21)|
 | Sep 15 | Text manipulation, Spacy | | |
-| Sep 18 | EXAM/  Hashtable implementations| | HW4: Hash table (due Sep 28)| | | 
+| Sep 18 | EXAM/  Hashtable implementations| | HW4: Hash table (due Sep 28)| 
 | Sep 22 | Scraping with Selenium | | |
 | Sep 25 | Selenium Part 2 | | |
 | Sep 29 | Flask| | HW5: Recommending server (due Oct 5)|
