--- a/notebooks/lecture_1_beautifulsoup.ipynb
+++ b/notebooks/lecture_1_beautifulsoup.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "tags": []
    },
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 17,
    "metadata": {
     "tags": []
    },
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 18,
    "metadata": {
     "tags": []
    },
@@ -67,7 +67,7 @@
        "<h1 class=\"title\">Welcome to My Website!</h1>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -90,7 +90,7 @@
        "<h1 class=\"title\">Welcome to My Website!</h1>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {
     "tags": []
    },
@@ -112,7 +112,7 @@
        "[<h1 class=\"title\">Welcome to My Website!</h1>]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -124,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {
     "tags": []
    },
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {
     "tags": []
    },
@@ -164,7 +164,7 @@
        "[<p>This is a paragraph.</p>, <p>This is another paragraph.</p>]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +338,7 @@
    },
    "outputs": [],
    "source": [
-    "tables = soup.findAll('table')\n",
+    "tables = soup.find_all('table')\n",
     "t = str(tables[0])"
    ]
   },
@@ -1433,6 +1433,35 @@
     "ax.set_ylabel(\"Country\")\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### An alternative "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "table_rates = soup.find(id=\"covid-19-cases-deaths-and-rates-by-location\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "table_rates2 = table_rates.find(\"table\")"
    ]
   },
   {
