--- a/notebooks/lab_3.ipynb
+++ b/notebooks/lab_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2f53d5cc-5544-40c5-a657-ca64955da867",
    "metadata": {
     "tags": []
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "cbc17695-158c-42a6-a962-c713875e0fd7",
    "metadata": {
     "tags": []
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "25198952-de63-45a0-9535-6966af28dd7f",
    "metadata": {
     "tags": []
@@ -52,28 +52,6 @@
    "outputs": [],
    "source": [
     "root = ET.fromstring(xmlstring)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "7ef4e485-30ba-44e8-b864-7da9ec8abf48",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Harry Potter and the Sorcerer's Stone\n",
-      "The Hobbit\n"
-     ]
-    }
-   ],
-   "source": [
-    "for el in root.findall(\"./book/title\"):\n",
-    "    print(el.text)"
    ]
   },
   {
@@ -86,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "140b180f-2b0e-46bc-be20-64810a86320d",
    "metadata": {
     "tags": []
@@ -104,30 +82,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "id": "82e96265-35f6-477d-bbb9-d5b577bf8d35",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alice\n",
-      "Alex\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "root = ET.fromstring(xmlstring)\n",
-    "for el in root.findall(\"./student[@age='20']\"):\n",
-    "    print(el.attrib[\"name\"])"
+    "root = ET.fromstring(xmlstring)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "id": "899e26ad-c370-464c-b9ae-61a2151fc43a",
    "metadata": {
     "tags": []
@@ -145,25 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "id": "98ef2844-2543-45d7-8c52-a87ba7bae494",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alice\n",
-      "Charlie\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "root = ET.fromstring(xmlstring)\n",
-    "for el in root.findall(\"./student[@year='2000']\"):\n",
-    "    print(el.attrib[\"name\"])"
+    "root = ET.fromstring(xmlstring)"
    ]
   },
   {
@@ -179,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "id": "7f1349cf-c38f-48b7-b421-3da46d05a71f",
    "metadata": {
     "tags": []
@@ -213,59 +169,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "54122eb7-a302-4c34-86e7-aacdf8fcce2f",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XML Basics\n",
-      "XML for Dummies\n"
-     ]
-    }
-   ],
-   "source": [
-    "root = ET.fromstring(xmlstring)\n",
-    "for el in root.findall(\"./book[price = '19.95']\"):\n",
-    "    print(el.find('title').text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "id": "cf388942-c716-4fb8-9219-606b254485d2",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "XML Basics\n",
-      "XML for Dummies\n",
-      "XML for Dummies version 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "for el in root.findall(\"./book\"):\n",
-    "    price = float(el.find('price').text)\n",
-    "    if price < 20:\n",
-    "        print(el.find('title').text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "5a05762b-71a7-4331-b02a-a62477856c99",
-   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "root = ET.fromstring(xmlstring)"
+   ]
   }
  ],
  "metadata": {
