--- a/notebooks/lecture_4_xml_xpath.ipynb
+++ b/notebooks/lecture_4_xml_xpath.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "id": "b1dcab0a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import xml.etree.ElementTree as ET"
@@ -12,9 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 14,
    "id": "221fca4b",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "xmlstring = \"\"\"<?xml version=\"1.0\"?>\n",
@@ -45,9 +49,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 15,
    "id": "7a28f7aa",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# ET.parse('country_data.xml') from file\n",
@@ -56,9 +62,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 16,
    "id": "e7a12a3a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -66,7 +74,7 @@
        "('data', {})"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -77,9 +85,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 17,
    "id": "7baf29d7",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -98,9 +108,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 18,
    "id": "e38a81e9",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -108,7 +120,7 @@
        "{'name': 'Singapore'}"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,9 +132,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 19,
    "id": "06fe3d40",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -130,7 +144,7 @@
        "('rank', '4')"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,17 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "id": "74f7a425",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<Element 'country' at 0x7febb83eb7e0>"
+       "<Element 'country' at 0x104b40d10>"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,19 +179,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 21,
    "id": "73b45810",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Element 'country' at 0x7febb83eb7e0>,\n",
-       " <Element 'country' at 0x7febb83eb9c0>,\n",
-       " <Element 'country' at 0x7febb83fc040>]"
+       "[<Element 'country' at 0x104b40d10>,\n",
+       " <Element 'country' at 0x104b41260>,\n",
+       " <Element 'country' at 0x104b413f0>]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,17 +213,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "id": "56be44b3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Element 'data' at 0x7febf0325f30>]"
+       "[<Element 'data' at 0x104b40cc0>]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,21 +238,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "id": "eed02b8d",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<Element 'neighbor' at 0x7febf0303790>,\n",
-       " <Element 'neighbor' at 0x7febf03037e0>,\n",
-       " <Element 'neighbor' at 0x7febf0303970>,\n",
-       " <Element 'neighbor' at 0x7febf0303b00>,\n",
-       " <Element 'neighbor' at 0x7febf0303b50>]"
+       "[<Element 'neighbor' at 0x104b411c0>,\n",
+       " <Element 'neighbor' at 0x104b41210>,\n",
+       " <Element 'neighbor' at 0x104b413a0>,\n",
+       " <Element 'neighbor' at 0x104b41530>,\n",
+       " <Element 'neighbor' at 0x104b41580>]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -245,9 +267,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "id": "90177c8a",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -268,9 +292,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "id": "08b53962",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -292,9 +318,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "1a5a06fd",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -317,9 +345,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 27,
    "id": "fa28db71",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -341,7 +371,7 @@
    "id": "074e0761",
    "metadata": {},
    "source": [
-    "## diference between \"/\" and \"//\""
+    "### Diference between \"/\" and \"//\""
    ]
   },
   {
@@ -446,30 +476,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 29,
    "id": "c6781e16",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'<?xml version=\"1.0\"?>\\n<data>\\n    <country name=\"Liechtenstein\">\\n        <rank>1</rank>\\n        <year>2008</year>\\n        <gdppc>141100</gdppc>\\n        <neighbor name=\"Austria\" direction=\"E\"/>\\n        <neighbor name=\"Switzerland\" direction=\"W\"/>\\n    </country>\\n    <neighbor name=\"Colombia\" direction=\"E\"/>\\n</data>\\n'"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<?xml version=\"1.0\"?>\n",
+      "<data>\n",
+      "    <country name=\"Liechtenstein\">\n",
+      "        <rank>1</rank>\n",
+      "        <year>2008</year>\n",
+      "        <gdppc>141100</gdppc>\n",
+      "        <neighbor name=\"Austria\" direction=\"E\"/>\n",
+      "        <neighbor name=\"Switzerland\" direction=\"W\"/>\n",
+      "    </country>\n",
+      "    <country name=\"Singapore\">\n",
+      "        <rank>4</rank>\n",
+      "        <year>2011</year>\n",
+      "        <gdppc>59900</gdppc>\n",
+      "        <neighbor name=\"Malaysia\" direction=\"N\"/>\n",
+      "    </country>\n",
+      "    <country name=\"Panama\">\n",
+      "        <rank>68</rank>\n",
+      "        <year>2011</year>\n",
+      "        <gdppc>13600</gdppc>\n",
+      "        <neighbor name=\"Costa Rica\" direction=\"W\"/>\n",
+      "        <neighbor name=\"Colombia\" direction=\"E\"/>\n",
+      "    </country>\n",
+      "</data>\n",
+      "\n"
+     ]
     }
    ],
    "source": [
-    "xmlstring"
+    "print(xmlstring)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 30,
    "id": "daefe60c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "neig = root.find(\".//neighbor[@name='Austria']\")"
@@ -477,9 +531,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 31,
    "id": "ac319558",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
@@ -487,7 +543,7 @@
        "{'name': 'Austria', 'direction': 'E'}"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,17 +554,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c04610ce",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 32,
    "id": "44637f4c",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "xml_string = '''\n",
@@ -525,9 +575,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 33,
    "id": "c1a6b8a1",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "root = ET.fromstring(xml_string)"
@@ -535,24 +587,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 38,
    "id": "b7d1d453",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'xml.etree.ElementTree.Element' object has no attribute 'xpath'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[60], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mroot\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mxpath\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mnodename\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'xml.etree.ElementTree.Element' object has no attribute 'xpath'"
-     ]
+     "data": {
+      "text/plain": [
+       "[<Element 'nodename' at 0x104b481d0>, <Element 'nodename' at 0x104b48270>]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "root.xpath('nodename')"
+    "root.findall('.//nodename')"
    ]
   },
   {
@@ -580,7 +633,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
